css/main.css
html, body {
  border: 0;
  margin: 0;
  padding: 0;
  height: 100%;
  width: fit-content;
  overflow-x: hidden;
}

::selection {
  background: #00ced1;
  color: #fff;
}

.hamburger {
  margin: 0;
  position: fixed;
  overflow: hidden;
  width: 70px;
  height: 100px;
  overflow: auto;
  margin-right: 15px;
  right: 0;
  bottom: 0px;
  z-index: 900;
}

.white {
  background-color: #fff;
}

.blue {
  background-color: #00ced1;
}

.blue:selection {
  background-color: #fff;
  color: #00ced1;
}

.ham {
  position: absolute;
  width: 62px;
  height: 10px;
  transition: all 350ms ease-in-out;
  top: 20px;
  z-index: 900;
}


.top {
  -webkit-animation-duration: 100ms;
  z-index: 900;
}

.middle {
  top: 40px;
  -webkit-animation-duration: 250ms;
  z-index: 900;
}

.bottom {
  top: 60px;
  -webkit-animation-duration: 250ms;
  transition: opacity 350ms linear;
  z-index: 900;
}

a {
    text-decoration: none;
    color: white;
}

.btn a {
  color: white;
}

a:hover {
  text-decoration: none;
}

.ham-hidden {
  opacity: 0;
  visibility: hidden;
  z-index: 900;
}

#links {
  position: fixed;
  right: 0;
  bottom: 0px;
  display: none;
  padding: 20px 20px;
  font-size: 24px;
  text-align: right;
  font-family: 'Arimo', sans-serif;
  background-color: rgba(0,206,209,0.7);
  height: 100%;
  z-index: 90;
}

#links ul {
  list-style-type: none;
}

#links ul li a {
  text-decoration: none;
  padding-bottom: 10px;
  margin-bottom: 12px;
  list-style: none;
  transition: all 150ms ease;
  color: black;
}

#links ul li a:hover {
  color: white;
  text-decoration: none;
  background-color: rgba(0,206,209,0.3);
}

#links ul li {
  list-style: none;
}

.line {
  background-color: black;
  border: solid black 2px;
  height: 0;
  margin-bottom: 5px;
  margin-top: -5px;
}

.rotate {
  transform: rotate(225deg);
  -webkit-transform: rotate(225deg);
  top: 30px;
}

.rotate-back {
  transform: rotate(-225deg);
  -webkit-transform: rotate(-225deg);
  top: 30px;
}

#title {
  height: 100%;
  width: 100%;
}

#left {
  background-color: #fff;
  color: #fff;
  height: 100%;
  width: 50%;
}

#left-text {
  position: relative;
  float: right;
  top: 25%;
}

#left-text h1 {
  background-color: #00ced1;
  width: fit-content;
  text-align: right;
  padding: 5px 8px 5px 8px;
}

#right {
  background-color: #00ced1;
  color: #00ced1;
  height: 100%;
  width: 50%;
}

#right-text {
  position: relative;
  top: calc(25% + 67.5px);
}


#right-text h1 {
  background-color: white;
}

@keyframes float {
  0% {
    margin-top: -100px;
  }

  50% {
    margin-top: -125px;
  }

  100% {
    margin-top: -100px;
  }

}

#arrow-container {
  margin: 0 auto;
  margin-top: -100px;
  margin-bottom: 10px;
  background-color: rgba(0, 0, 0, 0);
  animation: float 4s ease-in-out infinite;
}

#arrow {
  border: solid #fff;
  border-width: 0 15px 15px 0;
  display: inline-block;
  padding: 7px;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  margin-bottom: 5px;
  background-color: rgba(0, 0, 0, 0);
  border-color: #00ced1 #fff;
}

#title div div h1 {
  padding: 0px 15px 0px 15px;
}

h1 {
  font-family: 'Francois One', sans-serif;
  font-size: 48px;
  text-align: center;
}

#container {
  width: 100%;
  height: 100%;
}

.section {
  padding-top: 30px;
}

#work {
  margin-bottom: 20px;
}

p {
  margin: 0 auto;
  margin-bottom: 1rem;
  max-width: 60%;
  font-size: 18px;
  line-height: 1.5em;
}

.buttons {
  margin: 0 auto;
}

.btn {
  margin-left: 3px;
  margin-right: 3px;
  background-color: #FC6042;
  color: #fff;
  border: 4px solid white;
  border-top: none;
  border-left: none;
  border-radius: 15px;
  margin: 0 auto;
}

.btn:hover {
  background-color: #FC6042;
  border: 4px solid #BE2103;
  border-top: none;
  border-left: none;
  color: #fff;
  border-radius: 15px;
}

.row {
  margin: 0;
}

.flex-container {
  padding: 0;
  margin: 0;
  list-style: none;
  display: -webkit-box;
  display: -moz-box;
  display: ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-flow: row wrap;
  justify-content: space-around;
}

#bookeda {
  color: rgba(255, 255, 255, 0);
  background-image:url('../images/bookeda.png');
  transition: all 300ms ease;
}

#bookeda:hover {
  background: rgba(255, 165, 0, 0.7);
  color: white;
}

#any-a {
  color: rgba(255, 255, 255, 0);
  background-image:url('../images/any-a.png');
  transition: all 300ms ease;
}

#any-a:hover {
  background: rgba(204, 153, 204, 0.7);
  color: white;
}

#yonder {
  color: rgba(255, 255, 255, 0);
  background-image:url('../images/yonder.png');
  transition: all 300ms ease;
}

#computing-paths {
  color: rgba(255, 255, 255, 0);
  background-image:url('../images/computing-paths.png');
  transition: all 300ms ease;
}

#carbon-calc {
  color: rgba(120, 160, 170, 0);
  background-image:url('../images/carbon-calc.png');
  transition: all 300ms ease;
}

#carbon-calc:hover {
  color: white;
  background: rgba(26, 92, 72, 0.7);
}

#computing-paths:hover {
  background: rgba(0, 108, 164, 0.7);
  color: white;
}

#yonder:hover {
  background: rgba(51, 51, 153, 0.7);
  color: white;
}

#github-link {
  background: rgb(0, 206, 209);
  color: white;
  transition: all 300ms ease;
}

#github-link:hover {
  background: rgba(0, 206, 209, 0.7);
  color: white;
}

.flex-item {
  background: #aaa;
  background-size: cover;
  background-repeat: no-repeat;
  padding: 5px;
  width: 400px;
  height: 300px;
  margin-top: 10px;
  line-height: 300px;
  color: white;
  font-weight: bold;
  font-size: 3em;
  text-align: center;
  box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.2);
  border-radius: 15px;
}

.flex-item:hover {
  background-image:none;
  color: white;
}

#portfolio ul a {
  text-decoration: none;
}

i {
  font-size: 36px;
  color: #fff;
}

#contact {
  background-color: #FC6042;
  color: #fff;
  height: fit-content;
}

#contact h1 {
  color: #fff;
}

#contact .row {
  margin: 30px 0 30px;
}

#contact div div {
  text-align: center;
}

#contact div div a {
  text-decoration: none;
  color: #fff;
}

.text {
  margin-top: 30px;
  margin-bottom: 45px;
}

@media only screen and (min-width: 450px) {
  #right-text {
    width: fit-content;
  }
}

